<resources>
    <string name="app_name">Instagram</string>
    <string name="id">아이디</string>
    <string name="pw">비밀번호</string>
    <string name="pw_re">비밀번호 확인</string>
    <string name="sign_text">계정이 없으신가요?</string>
    <string name="login_text">계정이 있으신가요?</string>
    <string name="sign">가입하기</string>
    <string name="login">로그인</string>
    <string name="post_text">문구 입력</string>
    <string name="post">게시</string>
    <string name="profile">프로필 편집</string>
    <string name="change">변경하기</string>
    <string name="finish">완료</string>
</resources>